# CppStarter

./: .clang-format  .clang-tidy  CMakeLists.txt
cmake/: enableWarnings.cmake  santizer.cmake
